--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-katex": "^2.0.2",
     "react-scroll-to": "^3.0.0-beta.6"
   },
   "devDependencies": {
