--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-katex": "^2.0.2",
