--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.7",
-    "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-burger-menu": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-fittext": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-katex": "^2.0.2",
     "react-particles-js": "^3.3.0",
-    "react-scroll-to": "^3.0.0-beta.6"
+    "react-scroll-to": "^3.0.0-beta.6",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "prettier": "2.0.5"
