--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
     "gatsby": "^2.23.12",
+    "gatsby-cli": "^4.11.2",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
@@ -16,7 +17,6 @@
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.7",
-    "particles.js": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-burger-menu": "^2.8.0",
@@ -24,8 +24,8 @@
     "react-fittext": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-katex": "^2.0.2",
-    "react-particles-js": "^3.3.0",
     "react-scroll-to": "^3.0.0-beta.6",
+    "react-tsparticles": "^1.43.1",
     "sass": "^1.49.9"
   },
   "devDependencies": {
