updated npm and node

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.7",
+    "node": "^17.7.2",
+    "node-gyp": "^9.0.0",
+    "npm": "^8.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-burger-menu": "^2.8.0",
