--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.7",
-    "node": "^17.7.2",
+    "node": "^16.13.2",
     "node-gyp": "^9.0.0",
     "npm": "^8.6.0",
     "prop-types": "^15.7.2",
@@ -29,7 +29,9 @@
     "react-katex": "^2.0.2",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-tsparticles": "^1.43.1",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.3",
+    "stable": "^0.1.8"
   },
   "devDependencies": {
     "prettier": "2.0.5"
